2000-11-05  Mike Crowe <mac@fysh.org>

	* First public version 0.01 realeased.

2003-08-05  Mike Crowe <mac@fysh.org>

	* ID3v2 support added.
