@@ -6,3 +6,6 @@
 
 	* ID3v2 support added.
 
+2004-02-06  Mike Crowe <mac@fysh.org>
+
+	* Support for just dumping the bitrate of every frame added
